--- a/static/test/index.html
+++ b/static/test/index.html
@@ -8,46 +8,41 @@
     <title>Homepage</title>
 </head>
 <body>
-    <div class="container">
-        <div class="item logo"><img class="lean" src="./LeAn.png" alt="Learning Analytics logo"></div>
-        <div class="item links">
-            <ul class="menu">
-                <li><a href="#">Lorem Ipsum</a></li>
-                <li><a href="#">Dolor sit</a></li>
-                <li><a href="#">Amet nostrum</a></li>
-                <li><a href="#">Tel oppiculum</a></li>
-                <li><a href="#">Rex regea radentes</a></li>
-            </ul>
+    <div class="head">
+
+        <nav>
+            <div class="navbrand">
+                <img src="./LeAn.png" alt="Learning Analytics logo">
+                <span>Learning Analytics | Hogeschool Utrecht</span>
+            </div>
+            <div class="nav-items">
+                <ul>
+                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="#">HBO-i</a></li>
+                    <li><a href="#">Reviewer Suggestions</a></li>
+                    <li><a href="#">Open-ICT</a></li>
+                    <a href="#"><li class="btn">Setup</li></a>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="head-page">
+            <div class="text">
+                <h4>Welcome to</h4>
+                <h1>Learning Analytics</h1>
+                <p>We're a small group of students that really like data.
+                    Our project is meant to give insight in how you progress yourself during your study.
+                    Currently it is focused on our own study, but we're eager to expand in the near future.
+                </p>
+            <br/>
+                <p>If you encounter any bugs please report them to us by clicking the button below</p>
+                <a href="#"><button>I have found a bug</button></a>
+            </div>
+            <div class="head-img">
+                <!-- <img src="./Illustration 01.svg" alt="Main image"/> -->
+            </div>
         </div>
+
     </div>
-
-    <!-- <div class="footer">
-        <div class="inner_footer">
-            <div class="logo_container">
-                <img src="#" alt="Logo">
-            </div>
-
-            <div class="footer_third">
-                <h1>Need Help?</h1>
-                <a href="#">Terms &amp; Conditions</a>
-                <a href="#">Privacy Policy</a>
-            </div>
-
-            <div class="footer_third">
-                <h1>More</h1>
-                <a href="#">...</a>
-                <a href="#">...</a>
-            </div>
-
-            <div class="footer_third">
-                <h1>Follow us?</h1>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-            </div>
-
-
-        </div>
-    </div> -->
 </body>
 </html>
