Changes to css and added a file

--- a/static/test/index.html
+++ b/static/test/index.html
@@ -11,10 +11,12 @@
     <div class="head">
 
         <nav>
+            <a href="https://hu-open-ict.nl/">
             <div class="navbrand">
                 <img src="./LeAn.png" alt="Learning Analytics logo">
                 <span>Learning Analytics | Hogeschool Utrecht</span>
             </div>
+            </a>
             <div class="nav-items">
                 <ul>
                     <li><a href="#">Dashboard</a></li>
@@ -36,10 +38,10 @@
                 </p>
             <br/>
                 <p>If you encounter any bugs please report them to us by clicking the button below</p>
-                <a href="#"><button>I have found a bug</button></a>
+                <a href="#"><button>I have found a bug!</button></a>
             </div>
             <div class="head-img">
-                <!-- <img src="./Illustration 01.svg" alt="Main image"/> -->
+                <img src="./LeanBackdrop.png" alt="Main image"/>
             </div>
         </div>
 
